<resources>
    <string name="app_name">ПДД Справочник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="slide_main">Главная</string>
    <string name="slide_theory">Изучить теорию</string>
    <string name="slide_tests">Пройти тесты</string>
    <string name="slide_debts">Проверка штрафов</string>
    <string name="slide_tax">Расчет налога на авто</string>
    <string name="slide_region">Узнать регион по номеру</string>
    <string name="slide_item_title">Настройки</string>
    <string name="slide_settings">Настройки</string>
    <string name="slide_statistic">Статистика</string>
    <string name="slide_welcome">Добро пожаловать!</string>
    <string name="slide_choose">Выберите интересующий пункт меню:</string>
    <string name="button_online_debts">Проверка штрафов онлайн</string>
    <string name="button_find_region">Найти регион</string>
    <string name="theory_pdd">Правила Дорожного Движения</string>
    <string name="theory_znaki">Дорожные Знаки</string>
    <string name="theroy_razmetka">Дорожная разметка</string>
    <string name="theory_bilety">Билеты с ответами</string>
    <string name="theory_prilog">Приложения</string>
    <string name="button1_pdd">1.Общие положения</string>
    <string name="button2_pdd">2.Общие обязанности водителей</string>
    <string name="button3_pdd">3.Применение специальных сигналов</string>
    <string name="button4_pdd">4.Обязанности пешеходов</string>
    <string name="button5_pdd">5.Обязанности пассажиров</string>
    <string name="button6_pdd">6.Сигналы светофора и регулировщика</string>
    <string name="button7_pdd">7.Применение аварийной сигнализации и знака аварийной остановки</string>
    <string name="button8_pdd">8.Начало движения, маневрирование</string>
    <string name="button9_pdd">9.Расположение транспортных средств на проезжей части</string>
    <string name="button10_pdd">10.Скорость движения</string>
    <string name="button11_pdd">11.Обгон, опрежение, встречный разъезд</string>
    <string name="button12_pdd">12.Остановка и стоянка</string>
    <string name="button13_pdd">13.Проезд перекрестков</string>
    <string name="button14_pdd">14.Пешеходные переходы и места остановок маршрутных транспортных средств</string>
    <string name="button15_pdd">15.Движение через железнодорожные пути </string>
    <string name="button16_pdd">16.Движение по автомагистралям </string>
    <string name="button17_pdd">17.Движение в жилых зонах</string>
    <string name="button18_pdd">18.Приоритет маршрутных транспортных средств</string>
    <string name="button19_pdd">19.Пользование внешними световыми приборам и звуковыми сигналами</string>
    <string name="button20_pdd">20.Буксировка механических транспортных средств</string>
    <string name="button21_pdd">21.Учебная езда</string>
    <string name="button22_pdd">22.Перевозка людей</string>
    <string name="button23_pdd">23.Перевозка грузов</string>
    <string name="button24_pdd">24.Дополнительные требования к движению велосипедистов и водителей мопедов</string>
    <string name="button25_pdd">25.Дополнительные требования к движению гужевых повозок, а также к прогону животных </string>
    <string name="button1_znaki">1. ПРЕДУПРЕЖДАЮЩИЕ ЗНАКИ</string>
    <string name="button2_znaki">2. ЗНАКИ ПРИОРИТЕТА</string>
    <string name="button3_znaki">3. ЗАПРЕЩАЮЩИЕ ЗНАКИ И ЗНАКИ ЗОН ДЕЙСТВИЯ</string>
    <string name="button4_znaki">    ДОПОЛНИТЕЛЬНЫЕ ПОЯСНЕНИЯ К ЗАПРЕЩАЮЩИМ ЗНАКАМ</string>
    <string name="button5_znaki">    ЗНАКИ ЗОН ДЕЙСТВИЯ</string>
    <string name="button6_znaki">4. ПРЕДПИСЫВАЮЩИЕ ЗНАКИ</string>
    <string name="button7_znaki">5. УКАЗАТЕЛЬНЫЕ ЗНАКИ</string>
    <string name="button1_prilog">Основные положения по допуску транспортных средств к эксплуатации</string>
    <string name="button2_prilog">Перечень неисправностей, при которых запрещается эксплуатация транспортных средств </string>
    <string name="button3_prilog">Комментарии ГИБДД</string>
    <string name="button_calculate">Рассчитать</string>
    <string name="share_button">Поделиться</string>
    <string name="button_settings_name">Изменить имя пользователя</string>
    <string name="button_main_tests">Решать тесты</string>
    <string name="button_main_theory">Учить теорию</string>
    <string name="button_bilet_result">Завершить тест</string>
    <string name="button_test_bilet1">Билет №1</string>
    <string name="button_test_bilet2">Билет №2</string>
    <string name="button_test_bilet3">Билет №3</string>
    <string name="button_test_bilet4">Билет №4</string>
    <string name="button_test_bilet5">Билет №5</string>
    <string name="edit_find_region">Код региона</string>
    <string name="text_find_region">Название региона</string>
    <string name="debts_head_text">Таблица штрафов</string>
    <string name="text_table_region">Список регионов</string>
    <string name="text_calculator_head">Калькулятор транспортного налога Нижегородской области</string>
    <string name="text_calculator_power">Мощность двигателя</string>
    <string name="text_calculator_cost">Стоимость автомобиля</string>
    <string name="text_calculator_years">Лет с момента выпуска автомобиля</string>
    <string name="textView_settings_name">Чтобы изменить имя пользователя, введите его в строку и нажмите кнопку</string>
    <string name="textView_main">Или выберите интересующий пункт в боковом меню</string>
    <string name="textView_settings_wr">изменения вступят в силу после перезапуска приложения</string>
    <string name="textView_bilet_result">Результат:</string>
    <string name="radioButton_less_3m">меньше 3 миллионов рублей</string>
    <string name="radioButton_3m_5m">от 3 до 5 миллионов рублей</string>
    <string name="radioButton_5m_10m">от 5 до 10 миллионов рублей</string>
    <string name="radioButton_10m_15m">от 10 до 15 миллионов рублей</string>
    <string name="radioButton_more_15m">от 15 миллионов рублей</string>
    <string name="radioButton_years_1">не более года</string>
    <string name="radioButton_years_1_2">от года до 2-х лет</string>
    <string name="radioButton_years_2_3">от 2-х до 3-х лет</string>
    <string name="radioButton_years_5">не более 5-ти лет</string>
    <string name="radioButton_years_10">не более 10-ти лет</string>
    <string name="radioButton_years_15">не более 15-ти лет</string>
    <string name="bilet_text_name">Билет №1</string>
    <string name="vopros1">1.Какие транспортные средства по Правилам относятся к маршрутным транспортным средствам?</string>
    <string name="v1_o1">Все автобусы</string>
    <string name="v1_o2">Автобусы, троллейбусы и трамваи, предназначенные для перевозки людей и движущиеся по установленному маршруту с обозначенными местами остановок.</string>
    <string name="v1_o3">Любые транспортные средства, перевозящие пассажиров.</string>
    <string name="vopros2">2.В каких направлениях Вам разрешено продолжить движение?</string>
    <string name="v2_o1">Только Б.</string>
    <string name="v2_o2">Только А или Б.</string>
    <string name="v2_o3">В любых.</string>
    <string name="vopros3">3.Этот дорожный знак указывает:</string>
    <string name="v3_o1">Расстояние до конца тоннеля.</string>
    <string name="v3_o2">Расстояние до места аварийной остановки.</string>
    <string name="v3_o3">Направление движения к аварийному выходу и расстояние до него.</string>
    <string name="vopros4">4.Этот знак разрешает Вам ставить на стоянку легковой автомобиль с использованием тротуара:</string>
    <string name="v4_o1"> Только на правой стороне дороги до ближайшего по ходу движения перекрестка.</string>
    <string name="v4_o2">Только на правой стороне дороги до знака «Конец зоны регулируемой стоянки».</string>
    <string name="v4_o3">На любой стороне дорог, расположенных в зоне регулируемой стоянки.</string>
    <string name="vopros5">5.Эта разметка, нанесенная на полосе движения:</string>
    <string name="v5_o1">Предоставляет Вам преимущество при перестроении на правую полосу.</string>
    <string name="v5_o2">Информирует Вас о том, что дорога поворачивает направо.</string>
    <string name="v5_o3">Предупреждает Вас о приближении к сужению проезжей части.</string>
    <string name="vopros6">6.Что означает мигание зеленого сигнала светофора?</string>
    <string name="v6_o1">Предупреждает о неисправности светофора.</string>
    <string name="v6_o2">Разрешает движение и информирует о том, что вскоре будет включен запрещающий сигнал.</string>
    <string name="v6_o3">Запрещает дальнейшее движение.</string>
    <string name="vopros7">7.Обязаны ли Вы в данной ситуации подать сигнал правого поворота?</string>
    <string name="v7_o1">Да</string>
    <string name="v7_o2">Да, но только при наличии движущихся сзади транспортных средств.</string>
    <string name="v7_o3">Нет.</string>
    <string name="vopros8">8.Кто должен уступить дорогу при одновременном перестроении?</string>
    <string name="v8_o1">Водитель легкового автомобиля.</string>
    <string name="v8_o2">Водитель мотоцикла.</string>
    <string name="vopros9">9.По какой траектории Вам разрешено выполнить разворот?</string>
    <string name="v9_o1">Только по А.</string>
    <string name="v9_o2">Только по Б.</string>
    <string name="v9_o3">По любой..</string>
    <string name="vopros10">10.С какой скоростью Вы можете продолжить движение вне населенного пункта по левой полосе на легковом автомобиле?</string>
    <string name="v10_o1">Не более 50 км/ч.</string>
    <string name="v10_o2">Не менее 50 км/ч и не более 70 км/ч.</string>
    <string name="v10_o3">Не менее 50 км/ч и не более 90 км/ч.</string>
    <string name="vopros11">11.Может ли водитель легкового автомобиля в населенном пункте выполнить опережение грузовых автомобилей по такой траектории?</string>
    <string name="v11_o1">Да.</string>
    <string name="v11_o2">Нет.</string>
    <string name="vopros12">12.Разрешено ли водителю поставить автомобиль на стоянку в указанном месте?</string>
    <string name="v12_o1">Да.</string>
    <string name="v12_o2">Нет.</string>
    <string name="vopros13">13.Вы намерены повернуть направо. Следует ли уступить дорогу автобусу?</string>
    <string name="v13_o1">Да.</string>
    <string name="v13_o2">Нет.</string>
    <string name="vopros14">14.Вы намерены проехать перекресток в прямом направлении. Ваши действия?</string>
    <string name="v14_o1"> Уступите дорогу легковому автомобилю, поскольку он первым въехал на перекресток.</string>
    <string name="v14_o2">Убедитесь, что легковой автомобиль уступает дорогу, и проедете перекресток первым.</string>
    <string name="vopros15">15.Вы намерены повернуть налево. Кому следует уступить дорогу?</string>
    <string name="v15_o1">Только автобусу.</string>
    <string name="v15_o2">Только легковому автомобилю.</string>
    <string name="v15_o3">Никому.</string>
    <string name="vopros16">16.С какой максимальной скоростью Вы можете продолжить движение за знаком?</string>
    <string name="v16_o1">60 км/ч.</string>
    <string name="v16_o2">50 км/ч.</string>
    <string name="v16_o3">30 км/ч.</string>
    <string name="v16_o4">20 км/ч.</string>
    <string name="vopros17">17.Какие внешние световые приборы Вы можете использовать при движении в темное время суток на неосвещенных участках дорог?</string>
    <string name="v17_o1">Только фары ближнего света.</string>
    <string name="v17_o2">Только фары дальнего света.</string>
    <string name="v17_o3">Фары ближнего или дальнего света</string>
    <string name="vopros18">18.При какой неисправности разрешается эксплуатация транспортного средства?</string>
    <string name="v18_o1">Не работают запоры горловин топливных баков.</string>
    <string name="v18_o2">Не работает механизм регулировки сиденья водителя.</string>
    <string name="v18_o3"> Не работает устройство обогрева и обдува стекла.</string>
</resources>