<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_slide_main"
            android:title="@string/slide_main" />
        <item
            android:id="@+id/nav_theory"
            android:icon="@drawable/ic_slide_theory"
            android:title="@string/slide_theory"/>
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_slide_tests"
            android:title="@string/slide_tests" />
        <item
        android:id="@+id/nav_debts"
        android:icon="@drawable/ic_slide_debts"
        android:title="@string/slide_debts" />
        <item
            android:id="@+id/nav_tax"
            android:icon="@drawable/ic_slide_tax"
            android:title="@string/slide_tax" />
        <item
            android:id="@+id/nav_region"
            android:icon="@drawable/ic_slide_region"
            android:title="@string/slide_region" />
    </group>


    <item android:title="@string/slide_item_title">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_slide_settings"
                android:title="@string/slide_settings" />
            <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/ic_slide_statistic"
                android:title="@string/slide_statistic" />
            </group>
        </menu>
    </item>


</menu>
